<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:id="@+id/q5_title"
        android:textColor="@color/colorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:text="@string/q5_title"></TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:textSize="20sp"
        android:text="@string/q5_content"></TextView>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="20sp">

        <CheckBox
            android:id="@+id/q5_group_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_1"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_2"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_3"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_4"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_5"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_6"
            android:textSize="18sp"></CheckBox>
        <CheckBox
            android:id="@+id/q5_group_c7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_7"
            android:textSize="18sp"></CheckBox>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/q5_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginLeft="25sp"

            android:layout_marginRight="25sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="NEXT"

            android:textSize="20sp"></Button>
    </RelativeLayout>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
