<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:id="@+id/q10_title"
        android:textColor="@color/colorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:text="@string/q10_title"></TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:textSize="20sp"
        android:text="@string/q10_content"></TextView>
    <RadioGroup
        android:id="@+id/q10_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="100sp">

        <RadioButton
            android:id="@+id/q10_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10_1"
            android:textSize="20sp"></RadioButton>
        <RadioButton
            android:id="@+id/q10_group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10_2"
            android:textSize="20sp"></RadioButton>
        <RadioButton
            android:id="@+id/q10_group_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10_3"
            android:textSize="20sp"></RadioButton>
        <RadioButton
            android:id="@+id/q10_group_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q10_4"
            android:textSize="20sp"></RadioButton>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/q10_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginLeft="25sp"

            android:layout_marginRight="25sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="NEXT"

            android:textSize="20sp"></Button>
    </RelativeLayout>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
