<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--  Start : Your code should be within this block -->
    <!--Title-->
    <TextView
        android:id="@+id/dy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginTop="50px"
        android:text="@string/q1_title"
        android:textColor="@color/colorTitle"
        android:textSize="30sp"></TextView>


    <TextView
        android:id="@+id/dy_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="60sp"
        android:layout_marginRight="50sp"
        android:text="@string/q1_content"
        android:textSize="20sp"></TextView>
<LinearLayout
    android:id="@+id/dy_single"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RadioGroup
        android:id="@+id/dy_single_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="40sp">

        <RadioButton
            android:id="@+id/dy_single_b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="iPhone"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nokia"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Samsung"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MI"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lenovo"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sony"
            android:textSize="20sp"></RadioButton>

        <RadioButton
            android:id="@+id/dy_single_b7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others"
            android:textSize="20sp"></RadioButton>
    </RadioGroup>

</LinearLayout>

    <LinearLayout
        android:id="@+id/dy_multi"
        android:layout_marginTop="-290dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/dy_multi_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="20sp">

            <CheckBox
                android:id="@+id/dy_multi_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_1"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_2"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_3"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_4"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_5"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_6"
                android:textSize="18sp"></CheckBox>
            <CheckBox
                android:id="@+id/dy_multi_b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_7"
                android:textSize="18sp"></CheckBox>

        </RadioGroup>


    </LinearLayout>


    <!-- END    : Your code should be within this block -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-500dp">
        <Button
            android:id="@+id/next_button"
            android:onClick="nextClick"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:layout_marginLeft="25sp"

            android:layout_marginRight="25sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="NEXT"

            android:textSize="20sp"></Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-450dp"
        >
        <EditText
            android:id="@+id/dy_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Text here">

        </EditText>
    </LinearLayout>

</LinearLayout>


